# multiverse

./: .gitignore  Makefile  Portfolio Tracker 2.0.xlsx  pyproject.toml  requirements.txt  test-requirements.txt
module-7/activate/: Exploration Task-solution.ipynb  Exploration Task.ipynb  Introducing Dataframes.ipynb
module-7/mv-python/: pyproject.toml
module-7/mv-python/src/: __main__.py
module-7/mv-python/src/games/: rock_paper_scissors.py
rff-response-rates/: project_brief.bbl  project_brief.tex  refs.bib
src/module-10/: Clustering.ipynb  Clustering_solution.ipynb  Decision Trees.ipynb  Introduction to NLP-solution.ipynb  Introduction to NLP.ipynb  NLP-elective-solution.ipynb  NLP-elective.ipynb  Timeseries Activate Solution.ipynb  Timeseries Activate.ipynb  Web scraping- solution.ipynb  Web scraping.ipynb
src/module-10/data/: attrition.csv  bee_script.csv  spam_emails.csv  store_sales2.csv
src/module-8/: Statistics in python.ipynb  Visualizations in Python.ipynb
src/module-8/Workshop/: Central Limit Theorem.ipynb  Workshop 1.ipynb  Workshop 1_solution.ipynb  Workshop 2.ipynb  Workshop 2_solution.ipynb  Workshop 3 activity solution.ipynb  Workshop 3.ipynb  Workshop 3_solution.ipynb
src/module-9/: Linear Regression-solution.ipynb  Linear Regression.ipynb  Logistic Regression-Solution.ipynb  Readme  Regression Demo.ipynb
src/module-9/data/: ames_houses.csv  house_clean.csv
