[project]
name = "multiverse"
version = "1.0.0"
description = "Multiverse Python projects"
authors = [
    { name = "James Burton", email = "jburton@sopost.com" },
]
requires-python = ">=3.12.0"

dependencies = [
    "pydantic ~= 2.0.2",
    "urllib3 ~= 2.0.3",
    "requests ~= 2.31.0",
    "rich ~= 13.4.2",
    "pandas ~= 2.0.3",
    "numpy ~= 1.25.1",
    "matplotlib ~= 3.7.2",
    "jupyter ~= 1.0.0",
    "scikit-learn ~= 1.3.0",
    "statsmodels ~= 0.14.0",
    "scipy ~= 1.11.1",
]

[project.optional-dependencies]
test = [
    "pytest ~= 7.4.0",
    "hypothesis ~= 6.80.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
strict = ["**/*"]

reportShadowedImports = "warning"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

strict = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true

[tool.pydantic-mypy]
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true